--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
+    "datatables.net": "^1.13.8",
+    "datatables.net-dt": "^1.13.8",
+    "jquery": "^3.7.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
